# aerosimian-ros

./: CMakeLists.txt  package.xml
include/aerosimian/: vertiq.hpp
launch/: aerosimian_robot.launch.yaml  mocap_from_basestation.launch.yaml  pendulum_testing.launch.yaml
msg/: AeroSimianControl.msg  AeroSimianState.msg
src/: AeroSimianFullStateEstimator.cpp  AeroSimianFullStateEstimatorComponent.cpp  AeroSimianThetaStateEstimator.cpp  state_estimator.cpp
src/examples/: working_moteus_example.cpp
